🐛 Fix Chrome page width overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -124,7 +124,8 @@ body {
 
 	#page-grid {
 		width: 100dvw;
-		height: 100dvh;
+		max-width: 100%;
+		// height: 100dvh;
 		display: grid;
 		grid-template-rows: auto 1fr auto;
 
